--- a/library.properties
+++ b/library.properties
@@ -1,8 +1,8 @@
 name=MCP_ADC
-version=0.1.1
+version=0.1.2
 author=Rob Tillaart <rob.tillaart@gmail.com>
 maintainer=Rob Tillaart <rob.tillaart@gmail.com>
-sentence=Arduino library for MCP_ADC family MCP3008
+sentence=Arduino library for MCP3002, MCP3004, MCP3008, MCP3202, MCP3204, MCP3208
 paragraph=
 category=Sensors
 url=https://github.com/RobTillaart/MCP_ADC
