add readAnalogMultiple + maintenance (#12)
- add analogReadMultiple(channels\[], numChannels, readings\[]) 
  - Kudo's to Alex Uta.
- add performance example
  - add performance output files.
- add support MCP3201 (experimental)
- fix differentialRead()
- update examples (print lib version).
- update readme.md
- update library.properties
- minor edits

--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=MCP_ADC
-version=0.1.9
+version=0.2.0
 author=Rob Tillaart <rob.tillaart@gmail.com>
 maintainer=Rob Tillaart <rob.tillaart@gmail.com>
-sentence=Arduino library for MCP3002, MCP3004, MCP3008, MCP3202, MCP3204, MCP3208
-paragraph=
+sentence=Arduino library for MCP_ADC, e.g. MCP3008 SPI 10 bit, 8 channel ADC
+paragraph=MCP3002, MCP3004, MCP3008, MCP3201, MCP3202, MCP3204, MCP3208
 category=Sensors
 url=https://github.com/RobTillaart/MCP_ADC
 architectures=*
